application server web interface, script service and HTTP server framework
- ADD: TransferMode property to IHttpServer
- ADD: service that provides ECMA based IScriptExecutor via service
locator
- ADD: test web interface module
- ADD: handling CSS, JavaScript and image files in web interface

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Script/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Script/bin
