--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Script/MarcelJoachimKloubert.AppServer.Services.Script.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Script/MarcelJoachimKloubert.AppServer.Services.Script.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4A4A902F-A150-4351-942B-583B7D8A3812}</ProjectGuid>
+    <ProjectGuid>{C5351E00-B43C-463A-B6C3-255020C8552D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarcelJoachimKloubert.AppServer.Web.Common</RootNamespace>
-    <AssemblyName>MarcelJoachimKloubert.AppServer.Web.Common</AssemblyName>
+    <RootNamespace>MarcelJoachimKloubert.AppServer.Services.Script</RootNamespace>
+    <AssemblyName>MarcelJoachimKloubert.AppServer.Services.Script</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,7 +30,17 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.AppServer.Services.Script.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="RemObjects.Script, Version=2.0.71.1093, Culture=neutral, PublicKeyToken=3df3cad1b7aa5098, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\RemObjects.Script.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -40,27 +51,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modules\index.cs" />
-    <Compile Include="Modules\test.cs" />
+    <Compile Include="JavaScriptEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebInterfaceModuleBase.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MarcelJoachimKloubert.AppServer.Services.Script.snk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MarcelJoachimKloubert.CLRToolbox.40\MarcelJoachimKloubert.CLRToolbox.40.csproj">
       <Project>{50e0cdb2-bc51-4c46-949a-387e3534041f}</Project>
       <Name>MarcelJoachimKloubert.CLRToolbox.40</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MarcelJoachimKloubert.ApplicationServer.SDK\MarcelJoachimKloubert.ApplicationServer.SDK.csproj">
-      <Project>{f66c16a4-703b-4f09-a78d-2abb90030354}</Project>
-      <Name>MarcelJoachimKloubert.ApplicationServer.SDK</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MarcelJoachimKloubert.ApplicationServer\MarcelJoachimKloubert.ApplicationServer.csproj">
-      <Project>{9f006f97-a3b2-48e5-ba64-7f2df3c59c82}</Project>
-      <Name>MarcelJoachimKloubert.ApplicationServer</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LICENSE" />
+    <None Include="RemObjects.Script.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="_Libs\RemObjects.Script\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
