functions, resource, HTTP server improvments and fixes
- ADD: attribute to define root namespace of resources in an assembly
- ADD: framework for dedicated functions
- ADD: support for HTTPs and default TCP port in IHttpServer
- FIX: minor fixes in DelegateServiceLocator
- CHG: minor code improvments
- ADD: IObjectContext can try to find a Stream of an embedded resource
of its assembly

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Script/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Script/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Funcs.Common/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Funcs.Common/bin
