--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -192,6 +192,25 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\ExecutionErrorEventArgs.cs">
       <Link>Execution\ExecutionErrorEventArgs.cs</Link>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\FunctionBase.Classes.cs">
+      <Link>Execution\Functions\FunctionBase.Classes.cs</Link>
+      <DependentUpon>FunctionBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\FunctionBase.cs">
+      <Link>Execution\Functions\FunctionBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\FunctionLocatorBase.cs">
+      <Link>Execution\Functions\FunctionLocatorBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\IFunction.cs">
+      <Link>Execution\Functions\IFunction.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\IFunctionExecutionContext.cs">
+      <Link>Execution\Functions\IFunctionExecutionContext.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\IFunctionLocator.cs">
+      <Link>Execution\Functions\IFunctionLocator.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\ICommand.cs">
       <Link>Execution\ICommand.cs</Link>
     </Compile>
@@ -354,6 +373,10 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\net\http\HttpServerBase.cs">
       <Link>Net\Http\HttpServerBase.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\HttpServerBase.Interface.cs">
+      <Link>Net\Http\HttpServerBase.Interface.cs</Link>
+      <DependentUpon>HttpServerBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\HttpServerBase.StartStopContext.cs">
       <Link>Net\Http\HttpServerBase.StartStopContext.cs</Link>
       <DependentUpon>HttpServerBase.cs</DependentUpon>
@@ -395,11 +418,17 @@
       <Link>Net\Http\Modules\HttpModuleBase.HttpModuleHandleRequestResult.cs</Link>
       <DependentUpon>HttpModuleBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\Modules\HttpModuleLocatorBase.cs">
+      <Link>Net\Http\Modules\HttpModuleLocatorBase.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\net\http\modules\IHttpModule.cs">
       <Link>Net\Http\Modules\IHttpModule.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\net\http\modules\IHttpModuleHandleRequestResult.cs">
       <Link>Net\Http\Modules\IHttpModuleHandleRequestResult.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\Modules\IHttpModuleLocator.cs">
+      <Link>Net\Http\Modules\IHttpModuleLocator.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\SimpleHttpRequestContext.cs">
       <Link>Net\Http\SimpleHttpRequestContext.cs</Link>
@@ -422,6 +451,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Objects\ObjectContextBase.dotNET.cs">
       <Link>Objects\ObjectContextBase.dotNET.cs</Link>
       <DependentUpon>ObjectContextBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\resources\ResourceRootNamespaceAttribute.cs">
+      <Link>Resources\ResourceRootNamespaceAttribute.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Scripting\CommonScriptFunctionSetup.cs">
       <Link>Scripting\CommonScriptFunctionSetup.cs</Link>
