--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -182,6 +182,25 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\ExecutionErrorEventArgs.cs">
       <Link>Execution\ExecutionErrorEventArgs.cs</Link>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\FunctionBase.Classes.cs">
+      <Link>Execution\Functions\FunctionBase.Classes.cs</Link>
+      <DependentUpon>FunctionBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\FunctionBase.cs">
+      <Link>Execution\Functions\FunctionBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\FunctionLocatorBase.cs">
+      <Link>Execution\Functions\FunctionLocatorBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\IFunction.cs">
+      <Link>Execution\Functions\IFunction.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\IFunctionExecutionContext.cs">
+      <Link>Execution\Functions\IFunctionExecutionContext.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\functions\IFunctionLocator.cs">
+      <Link>Execution\Functions\IFunctionLocator.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\ICommand.cs">
       <Link>Execution\ICommand.cs</Link>
     </Compile>
@@ -340,6 +359,10 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\net\http\HttpServerBase.cs">
       <Link>Net\Http\HttpServerBase.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\HttpServerBase.Interface.cs">
+      <Link>Net\Http\HttpServerBase.Interface.cs</Link>
+      <DependentUpon>HttpServerBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\HttpServerBase.StartStopContext.cs">
       <Link>Net\Http\HttpServerBase.StartStopContext.cs</Link>
       <DependentUpon>HttpServerBase.cs</DependentUpon>
@@ -381,11 +404,17 @@
       <Link>Net\Http\Modules\HttpModuleBase.HttpModuleHandleRequestResult.cs</Link>
       <DependentUpon>HttpModuleBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\Modules\HttpModuleLocatorBase.cs">
+      <Link>Net\Http\Modules\HttpModuleLocatorBase.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\net\http\modules\IHttpModule.cs">
       <Link>Net\Http\Modules\IHttpModule.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\net\http\modules\IHttpModuleHandleRequestResult.cs">
       <Link>Net\Http\Modules\IHttpModuleHandleRequestResult.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\Modules\IHttpModuleLocator.cs">
+      <Link>Net\Http\Modules\IHttpModuleLocator.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Net\Http\SimpleHttpRequestContext.cs">
       <Link>Net\Http\SimpleHttpRequestContext.cs</Link>
@@ -408,6 +437,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Objects\ObjectContextBase.dotNET.cs">
       <Link>Objects\ObjectContextBase.dotNET.cs</Link>
       <DependentUpon>ObjectContextBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\resources\ResourceRootNamespaceAttribute.cs">
+      <Link>Resources\ResourceRootNamespaceAttribute.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Scripting\CommonScriptFunctionSetup.cs">
       <Link>Scripting\CommonScriptFunctionSetup.cs</Link>
@@ -629,6 +661,7 @@
     <Compile Include="Extensions\Scripting.SetAction.4.cs" />
     <Compile Include="Extensions\Scripting.SetFunc.4.cs" />
     <Compile Include="Helpers\CollectionHelper.ForAllAsync.Impl.cs" />
+    <Compile Include="Helpers\CompositionHelper.cs" />
     <Compile Include="Helpers\TaskHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripting\ScriptExecutorBase.Collections.cs" />
