--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/MarcelJoachimKloubert.AppServer.Modules.RemoteComm.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/MarcelJoachimKloubert.AppServer.Modules.RemoteComm.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteCommModule.cs" />
+    <Compile Include="WebInterface\modules\index.cs" />
+    <Compile Include="WebInterface\WebModuleBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LICENSE" />
@@ -63,6 +65,12 @@
       <Project>{f66c16a4-703b-4f09-a78d-2abb90030354}</Project>
       <Name>MarcelJoachimKloubert.ApplicationServer.SDK</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Web\Goethe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Web\test.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
