--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.csproj
@@ -40,6 +40,10 @@
     <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.ApplicationServer.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="RemObjects.Script, Version=2.0.71.1093, Culture=neutral, PublicKeyToken=3df3cad1b7aa5098, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\RemObjects.Script.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -53,6 +57,8 @@
   <ItemGroup>
     <Compile Include="ApplicationServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Execution\Functions\FunctionLocator.cs" />
+    <Compile Include="Services\Net\Http\Modules\HttpModuleLocator.cs" />
     <Compile Include="WebInterface\WebInterfaceHandler.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +74,12 @@
   <ItemGroup>
     <EmbeddedResource Include="LICENSE" />
     <None Include="MarcelJoachimKloubert.ApplicationServer.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="RemObjects.Script.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="_Libs\RemObjects.Script\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
