HTTP, ApplicationServer, objects, code improvments and fixes
- ADD: basic Write() methods for IHttpResponse interface
- CHG: moved script engine service to ApplicationServer assembly
- CHG: code improvements
- CHG: ObjectContextBase uses SHA-512 for hashing in .NET environments
- ADD: additionally using public assembly key to calculate object
context hash
- FIX: minor fixes

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -277,6 +277,9 @@
     <Compile Include="Net\SimpleTcpAddress.cs" />
     <Compile Include="Objects\IdentifiableObjectContextBase.cs" />
     <Compile Include="Objects\IObjectContext.cs" />
+    <Compile Include="Objects\ObjectContextBase.CreateHasher.cs">
+      <DependentUpon>ObjectContextBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Objects\ObjectContextBase.cs" />
     <Compile Include="Objects\ObjectContextBase.dotNET.cs">
       <DependentUpon>ObjectContextBase.cs</DependentUpon>
