SQLite, composition, sorting and optimizations
- ADD: started to implement local SQLIte database feature
- ADD: ComposeExportedValue() helper method for exporting value for a
specific type
- ADD: Sort() helper and extension methods
- ADD: DelegateComparer<T>
- CHG: optimized Cast() helper method
- ADD: types for compatibility with older target frameworks

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Serialize/bin
 /Projects/build
 /Projects/MarcelJoachimKloubert.ApplicationServer/MonoTorrent/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.SystemSqlite/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.SystemSqlite/bin
