--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.SystemSqlite/MarcelJoachimKloubert.AppServer.Services.SystemSqlite.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.SystemSqlite/MarcelJoachimKloubert.AppServer.Services.SystemSqlite.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F66C16A4-703B-4F09-A78D-2ABB90030354}</ProjectGuid>
+    <ProjectGuid>{72FC4124-342C-4A2A-A8A3-F3AB629E8EC6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MarcelJoachimKloubert.ApplicationServer</RootNamespace>
-    <AssemblyName>MarcelJoachimKloubert.ApplicationServer.SDK</AssemblyName>
+    <RootNamespace>MarcelJoachimKloubert.AppServer.Services.SystemSqlite</RootNamespace>
+    <AssemblyName>MarcelJoachimKloubert.AppServer.Services.SystemSqlite</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,8 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Debug\MarcelJoachimKloubert.ApplicationServer.SDK.XML</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,17 +29,25 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.ApplicationServer.SDK.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.AppServer.Services.SystemSqlite.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\MarcelJoachimKloubert.ApplicationServer.TestHost\System.Data.SQLite.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Data.SQLite.Linq">
+      <HintPath>..\MarcelJoachimKloubert.ApplicationServer.TestHost\System.Data.SQLite.Linq.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,42 +55,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppServerBase.StartStopContext.cs">
-      <DependentUpon>AppServerBase.cs</DependentUpon>
-    </Compile>
-    <Compile Include="AppServerBase.cs" />
-    <Compile Include="Data\SQLite\ISqliteDatabaseFactory.cs" />
-    <Compile Include="Data\SQLite\SqliteDatabaseFactoryBase.cs" />
-    <Compile Include="Extensions\AppServerExtensionMethods.cs" />
-    <Compile Include="Extensions\Objects.cs" />
-    <Compile Include="Extensions\Objects.WebHash.cs" />
-    <Compile Include="IAppServerInitContext.cs" />
-    <Compile Include="Modules\AppServerModuleBase.StartStopContext.cs">
-      <DependentUpon>AppServerModuleBase.cs</DependentUpon>
-    </Compile>
-    <Compile Include="IAppServer.cs" />
-    <Compile Include="IAppServerContext.cs" />
-    <Compile Include="Modules\AppServerModuleBase.cs" />
-    <Compile Include="Modules\IAppServerModuleInitContext.cs" />
-    <Compile Include="Modules\IAppServerModule.cs" />
-    <Compile Include="Modules\IAppServerModuleContext.cs" />
-    <Compile Include="Modules\SimpleAppServerModuleContext.cs" />
-    <Compile Include="Modules\SimpleAppServerModuleInitContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleAppServerContext.cs" />
-    <Compile Include="SimpleAppServerInitContext.cs" />
+    <Compile Include="SqliteDatabaseFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MarcelJoachimKloubert.ApplicationServer.SDK.snk" />
+    <None Include="MarcelJoachimKloubert.AppServer.Services.SystemSqlite.snk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MarcelJoachimKloubert.CLRToolbox.40\MarcelJoachimKloubert.CLRToolbox.40.csproj">
       <Project>{50e0cdb2-bc51-4c46-949a-387e3534041f}</Project>
       <Name>MarcelJoachimKloubert.CLRToolbox.40</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="LICENSE" />
+    <ProjectReference Include="..\MarcelJoachimKloubert.ApplicationServer.SDK\MarcelJoachimKloubert.ApplicationServer.SDK.csproj">
+      <Project>{f66c16a4-703b-4f09-a78d-2abb90030354}</Project>
+      <Name>MarcelJoachimKloubert.ApplicationServer.SDK</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MarcelJoachimKloubert.ApplicationServer\MarcelJoachimKloubert.ApplicationServer.csproj">
+      <Project>{9f006f97-a3b2-48e5-ba64-7f2df3c59c82}</Project>
+      <Name>MarcelJoachimKloubert.ApplicationServer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
